# omniget-cli

./: .gitignore  .weblate  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  Refactoring OmniGet Core Logic.md  demo.tape  mass_replace.py  mass_replace_v2.py  openssf_audit.md  package-lock.json  package.json
.github/workflows/: cli-release.yml  release.yml
.scratch/: demo.tape  qp_audit.md
.zed/: settings.json
browser-extension/chrome/pages/: error.html  error.js
browser-extension/chrome/popup/: popup.html
browser-extension/chrome/scripts/: package.mjs
browser-extension/chrome/src/: background.js  media-sniffer.js
docs/: brand-guidelines.md  cli-overview.md
docs/superpowers/plans/: 2026-05-04-cli-live-progress-redesign.md
docs/superpowers/specs/: 2026-05-04-cli-live-progress-design.md
mangofetch-cli/: Cargo.toml
mangofetch-cli/src/: formatting.rs  main.rs  output.rs  reporter.rs
mangofetch-cli/tests/: integration_tests.rs
mangofetch-core/: Cargo.toml
mangofetch-core/src/: fs_paths.rs  lib.rs
mangofetch-core/src/core/: cookie_parser.rs  dependencies.rs  events.rs  ffmpeg.rs  hls_downloader.rs  log_hook.rs  logger.rs  paths.rs  registry.rs  ytdlp.rs
mangofetch-core/src/core/manager/: mod.rs  queue.rs
mangofetch-core/src/models/: media.rs  mod.rs  settings.rs
mangofetch-core/tests/: queue_tests.rs
mangofetch-plugin-sdk/: Cargo.toml
mangofetch-plugin-sdk/src/: plugin.rs
omniget-cli/: Cargo.toml
omniget-cli/src/: main.rs  output.rs  reporter.rs
omniget-core/: Cargo.toml
omniget-core/src/core/: direct_downloader.rs  errors.rs  ffmpeg.rs  http_client.rs  logger.rs  mod.rs  redirect.rs  traits.rs
omniget-core/src/core/manager/: download_log.rs  recovery.rs
omniget-core/src/models/: queue.rs
omniget-plugin-sdk/: Cargo.toml
omniget-plugin-sdk/src/: host.rs
scripts/: bump-version.js  deploy-plugins-local.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/omniget-cli/: Cargo.toml
src-tauri/omniget-cli/src/: main.rs
src-tauri/omniget-core/: Cargo.toml
src-tauri/omniget-core/src/core/: clipboard.rs  cookie_parser.rs  course_utils.rs  dependencies.rs  hls_downloader.rs  http_client.rs  hwaccel.rs  media_processor.rs  mod.rs  paths.rs  pokemon_names.rs  ytdlp.rs
src-tauri/omniget-core/src/models/: media.rs  mod.rs  settings.rs
src-tauri/omniget-plugin-sdk/src/: lib.rs  manifest.rs
src-tauri/omniget-plugin-telegram/src/: lib.rs
src-tauri/src/: external_url.rs  hotkey.rs  lib.rs  main.rs  native_host.rs  plugin_loader.rs  tray.rs
src-tauri/src/commands/: app_lifecycle.rs  astronmembers.rs  auth_webview.rs  autostart.rs  downloads.rs  estrategia_ldi.rs  fluencyacademy.rs  grancursos.rs  greenn.rs  kirvano.rs  memberkit_cmd.rs  mod.rs  p2p.rs  plugins.rs  settings.rs  skool.rs
src-tauri/src/core/: cookie_parser.rs  dependencies.rs  ffmpeg.rs  mod.rs  process.rs  queue.rs  url_parser.rs  ytdlp.rs
src/components/dialog/: LegalDialog.svelte  RecoveryDialog.svelte  ShortcutsDialog.svelte
src/lib/: plugin-invoke.ts
src/lib/i18n/: el.json  en.json  fr.json  it.json  ja.json  keys.ts  pt.json  zh-TW.json  zh.json
src/lib/stores/: changelog-store.svelte.ts  debug-store.svelte.ts  download-listener.ts  download-store.svelte.ts  settings-store.svelte.ts  toast-store.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/about/project/: +page.svelte
src/routes/convert/: +page.svelte
src/routes/courses/: +page.svelte
src/routes/courses/[platform]/: +page.svelte
src/routes/courses/cademi/: +page.svelte
src/routes/courses/caktomembers/: +page.svelte
src/routes/courses/datascienceacademy/: +page.svelte
src/routes/courses/kiwify/: +page.svelte
src/routes/courses/masterclass/: +page.svelte
src/routes/courses/rocketseat/: +page.svelte
src/routes/courses/themembers/: +page.svelte
src/routes/downloads/: +page.svelte
src/routes/marketplace/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/telegram/: +page.svelte
