[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-tauri/omniget-core",
    "src-tauri/omniget-plugin-sdk",
    "src-tauri/omniget-cli",
]

# This makes 'cargo run' from root execute the CLI by default
default-members = ["src-tauri/omniget-cli"]

[profile.dev]
debug = 0
codegen-units = 256
incremental = true

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
