[package]
name = "mangofetch-cli"
version = "0.3.0"
edition = "2021"
description = "Command-line interface for MangoFetch download manager"
authors = ["Jules Martins <TU_ID+julesklord@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/mangofetch-cli"
readme = "../README.md"
keywords = ["mangofetch", "downloader", "cli", "video"]
categories = ["command-line-utilities"]

[[bin]]
name = "mangofetch"
path = "src/main.rs"

[dependencies]
mangofetch-core = { path = "../mangofetch-core", version = "0.3.0", features = [
    "manager",
    "platforms",
] }
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
dirs = "6.0.0"
