[package]
name = "mangofetch-plugin-sdk"
version = "0.3.0"
edition = "2021"
description = "SDK for building MangoFetch plugins"
authors = ["Jules Martins <TU_ID+julesklord@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/mangofetch-cli"
readme = "../README.md"
keywords = ["mangofetch", "plugin", "sdk", "downloader"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
