[package]
name = "omniget-core"
version = "0.2.0"
edition = "2021"
description = "Core download engine for OmniGet"
authors = ["Jules Martins <TU_ID+julesklord@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/omniget-cli"
readme = "../README.md"
keywords = ["omniget", "downloader", "engine", "video"]
categories = ["multimedia"]

[lib]
name = "omniget_core"

[features]
default = ["desktop"]
desktop = []
mobile = []
manager = []
platforms = [
    "librqbit",
    "which",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "http2", "gzip", "brotli", "deflate", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
base64 = "0.22.1"
sha2 = "0.10"
filetime = "0.2.27"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"
open = "5"
librqbit = { version = "8.1.1", optional = true }
which = { version = "6", optional = true }
rand = "0.8"
