[package]
name = "omniget-plugin-sdk"
version = "0.2.0"
edition = "2021"
description = "SDK for building OmniGet plugins"
authors = ["Jules Martins <TU_ID+julesklord@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/omniget-cli"
readme = "../README.md"
keywords = ["omniget", "plugin", "sdk", "downloader"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
