[package]
name = "omniget-cli"
version = "0.1.1-fix"
edition = "2021"

[dependencies]
omniget-core = { path = "../omniget-core", features = ["manager"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
dirs = "6.0.0"
omniget_lib = { package = "omniget", path = ".." }
